--- a/contact.html
+++ b/contact.html
@@ -101,12 +101,12 @@
 	          </div>
 	          <div class="col-lg-6 col-xl-3 mb-4">
 	          	<div class="info">
-		            <p><span>Phone:</span> <a href="tel://1234567920">+91 6261146343</a></p>
+		            <p><span>Phone:</span> <a href="tel://+916261146343">+91 6261146343</a></p>
 		          </div>
 	          </div>
 	          <div class="col-lg-6 col-xl-3 mb-4">
 	          	<div class="info">
-		            <p><span>Email:</span> <a href="mailto:info@yoursite.com">Anuragkumarshah6@gmail.com</a></p>
+		            <p><span>Email:</span> <a href="email:- anuragkumarshah6@gmail.com.com">Anuragkumarshah6@gmail.com</a></p>
 		          </div>
 	          </div>
 	          <div class="col-lg-6 col-xl-3 mb-4">
